# modular-monolithic-app

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  copier-plan.md  copier.yml  docker-compose.yml  enterpise-plan.md  mkdocs.yml  plan.md  project-structure.md  pyproject.toml  todo-app-architecture-summary.md
.agents/: README.md
.agents/architect/: role.md
.agents/developer/: role.md
.agents/devops/: role.md
.agents/lead/: role.md
.agents/sre/: role.md
.agents/tester/: role.md
.claude/: README.md
.claude/commands/: quality-gate.md
.claude/rules/: architecture.md  coding-style.md  testing.md
.claude/skills/add-bounded-context/: SKILL.md
.claude/skills/add-use-case/: SKILL.md
.gitea/actions/setup-lab/: action.yml
.gitea/workflows/: cd.yml  ci-cd.yml  ci.yml  promote.yml  tf-floci.yml
.github/workflows/: ci.yml  ecr.yml  terraform.yml
copier/: README.md
copier/includes/: docker-image-name.jinja  module-name.jinja  slugify.jinja
copier/tasks/: check_tools.sh  post_gen.py
docker/init/: 01_extensions.sql
docker/mock-data/: tasks.json  users.json
docs/: copier.md  enterprise.md  index.md  launch.md
docs/adr/: 0001-per-context-di-containers.md  0002-cognito-over-keycloak.md  0003-rls-over-app-layer-tenancy.md  0004-ai-as-bounded-context.md  0005-db-init-as-separate-job.md  0006-least-privilege-iam-irsa.md  index.md
docs/architecture/: ai-context.md  bounded-contexts.md  layering.md  multi-tenancy.md  overview.md
docs/development/: governance.md  setup.md  testing.md
docs/operations/: cicd.md  deployment.md  gitops.md  infrastructure.md  observability.md
infra/k8s/dependencies/base/: kustomization.yaml  postgres.yaml  redis.yaml
infra/k8s/gitops/: README.md  app-dev.yaml  app-prod.yaml  applicationset.yaml  floci-seed.sh  project.yaml
infra/k8s/gitops/applications/: dependencies-dev.yaml  dependencies-prod.yaml  todo-app-dev.yaml  todo-app-prod.yaml
infra/k8s/helm/: .helmignore  Chart.yaml  NOTES.txt  values-dev.yaml  values-floci.yaml  values-prod.yaml  values.yaml
infra/k8s/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  job-db-init.yaml  namespace.yaml  rbac.yaml  secret.yaml  service-account.yaml  service.yaml
infra/terraform/: .trivyignore  README.md
infra/terraform/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/terraform/environments/prod/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/terraform/local/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/aurora/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/bedrock/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/modules/cdn/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/cognito/: groups.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/eks/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
infra/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: ai_pod_role.tf  api_pod_role.tf  db_init_job_role.tf  eventbridge_role.tf  main.tf  outputs.tf  variables.tf
infra/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/route53/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets-manager/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/security-baseline/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/sqs-sns/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
infra/terragrunt/: README.md  terragrunt.hcl
infra/terragrunt/dev/: .terraform.lock.hcl  terragrunt.hcl
infra/terragrunt/prod/: terragrunt.hcl
infra/tests/: README.md
infra/tests/terratest/: go.mod  helm_chart_test.go
infra/tests/trivy/: .trivyignore  trivy-config.yaml
migrations/: atlas.hcl
migrations/policies/: ai_suggestions_rls.sql  tasks_rls.sql  users_rls.sql
migrations/versions/: 20260620000000_baseline.sql  20260620000100_rls_policies.sql  atlas.sum
observability/: README.md  docker-compose.observability.yml  otel-collector-config.yaml
observability/grafana/dashboards/: cache-hit-rate.json  db-pool-saturation.json  error-rate.json  request-latency.json  service-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/prometheus/: prometheus.yml
observability/tempo/: tempo.yaml
scripts/: create_venv.sh  init.sh
src/todo_app/: __init__.py  main.py
src/todo_app/contexts/: __init__.py
src/todo_app/contexts/ai/: __init__.py  (+1 more)
src/todo_app/core/: config.py  logging.py  telemetry.py
src/todo_app/scripts/: seed.py
tests/: conftest.py
tests/architecture/: test_boundaries.py
tests/e2e/: test_api_endpoints.py  test_api_flow.py  test_app_lifecycle.py
tests/integration/: test_background_tasks.py  test_cross_context_adapters.py  test_rls_isolation.py  test_suggestion_repository.py  test_task_repository.py  test_user_repository.py
tests/support/: api_fakes.py  containers.py  fakes.py
tests/unit/: test_builder_and_logging.py  test_caching.py  test_container_wiring.py  test_rate_limit.py
tests/unit/ai/: test_bedrock_client.py  test_suggestion_entity.py  test_use_cases.py
tests/unit/presentation/: test_app_builder.py  test_dependencies.py  test_errors.py  test_metrics_middleware.py  test_pagination_runtime.py  test_routers.py  test_serializers.py
tests/unit/shared/: test_events.py  test_infrastructure.py  test_value_objects.py
tests/unit/tasks/: test_task_entity.py  test_use_cases.py
tests/unit/users/: test_cognito.py  test_use_cases.py  test_user_entity.py
(+140 files in other folders)
