[project]
name = "todo-app"
version = "0.1.0"
description = "Modular-monolith TODO service (DDD, multi-tenant, AWS Cognito + Bedrock)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cristian Galvis", email = "cjgalvisc@unal.edu.co" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "dependency-injector>=4.41",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "typer>=0.12",
    "boto3>=1.34",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "prometheus-client>=0.20",  # /metrics for Prometheus scraping
]

[project.scripts]
todo-cli = "todo_app.presentation.cli.main:app"
todo-api = "todo_app.presentation.api.main:main"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pyright>=1.1.370",
    "import-linter>=2.0",
    "vulture>=2.11",
]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",      # parallel test execution (-n)
    "pytest-randomly>=3.15",  # randomized test order each run
    "aiosqlite>=0.20",
    "asgi-lifespan>=2.1",
]
lint = [
    "ruff>=0.5",
]
observability = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
    "opentelemetry-instrumentation-botocore>=0.46b0",
]

[tool.uv]
# Provision dev + test + lint by default so `uv run <tool>` (and every Taskfile
# target) works on a freshly synced env — `observability` stays opt-in.
default-groups = ["dev", "test", "lint"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Note: flake8-type-checking (TCH/TC) is intentionally NOT enabled — its
# auto-fix moves runtime-evaluated annotations (SQLAlchemy `Mapped[...]`,
# Pydantic fields, FastAPI path params) under `TYPE_CHECKING`, which breaks
# ORM mapping and schema generation.
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.isort]
known-first-party = ["todo_app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
# Parallel by default (4 workers via pytest-xdist); --dist loadscope keeps each
# test module on one worker (module-scoped fixtures + serializes the RLS module
# against its shared Postgres). Order is randomized each run by pytest-randomly.
# Override per-run with e.g. `-n0` (serial, for debugging) or `-n auto`.
addopts = "-q -n 4 --dist loadscope"

[tool.coverage.run]
branch = true
source = ["src/todo_app"]
omit = [
    "*/presentation/cli/*",   # exercised via CLI smoke, not coverage
    "*/core/telemetry.py",     # optional OTel wiring, needs collector
    "*/main.py",               # ASGI bootstrap entrypoint
]

[tool.coverage.report]
fail_under = 97
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:", "\\.\\.\\."]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true

[tool.vulture]
paths = ["src"]
min_confidence = 70

[tool.importlinter]
root_packages = ["todo_app"]
include_external_packages = true

# --- Layered architecture per bounded context: domain <- application <- infrastructure ---
[[tool.importlinter.contracts]]
name = "Shared context layering"
type = "layers"
layers = ["infrastructure", "application", "domain"]
containers = ["todo_app.contexts.shared"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Users context layering"
type = "layers"
layers = ["infrastructure", "application", "domain"]
containers = ["todo_app.contexts.users"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Tasks context layering"
type = "layers"
layers = ["infrastructure", "application", "domain"]
containers = ["todo_app.contexts.tasks"]
exhaustive = false

[[tool.importlinter.contracts]]
name = "AI context layering"
type = "layers"
layers = ["infrastructure", "application", "domain"]
containers = ["todo_app.contexts.ai"]
exhaustive = false

# --- Bounded-context isolation: contexts must not import each other's internals ---
[[tool.importlinter.contracts]]
name = "Bounded contexts are independent"
type = "independence"
modules = [
    "todo_app.contexts.users",
    "todo_app.contexts.tasks",
    "todo_app.contexts.ai",
]
# No ignores needed: contexts never import each other's internals. The only
# place that sees two contexts at once is the root composition (core/di), which
# is outside these modules and therefore unconstrained by this contract.

# --- Domain purity: no framework leakage into domain layers ---
[[tool.importlinter.contracts]]
name = "Domain layers are framework-free"
type = "forbidden"
source_modules = [
    "todo_app.contexts.shared.domain",
    "todo_app.contexts.users.domain",
    "todo_app.contexts.tasks.domain",
    "todo_app.contexts.ai.domain",
]
forbidden_modules = [
    "fastapi",
    "sqlalchemy",
    "boto3",
    "redis",
    "dependency_injector",
]

# --- Presentation must not reach into infrastructure or DB models directly ---
[[tool.importlinter.contracts]]
name = "Presentation depends on application, not infrastructure"
type = "forbidden"
source_modules = ["todo_app.presentation"]
forbidden_modules = [
    "todo_app.contexts.users.infrastructure",
    "todo_app.contexts.tasks.infrastructure",
    "todo_app.contexts.ai.infrastructure",
]
allow_indirect_imports = true
